--- a/myBlogV2/index.html
+++ b/myBlogV2/index.html
@@ -2,43 +2,33 @@
 <html>
 <head>
     <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>얼렁뚱땅 블로그</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stysheet" type="text/css" href="css/main.css"/>
-
-
-  
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
 <body>
     <header>
         <h3>얼렁뚱땅 블로그 V1</h3>
-        <p>나의 얼렁뚱땅 블로그에 방문해 주신것을 환영합니다!!!</p>
+        <p>나의 얼렁뚱땅 블로그에 방문해 주신것을 환영합니다!!</p>
     </header>
     <section id="main">
         <article id="button">
-            <button>블로그 작성</button>
-        </article >
-
-       
-        <article id="blog_body">
-            <section class="blog_title">
-                <h4>오늘은 블로그 시작하는 날</h4>
-
-            </section>z
-            <section id="blog_text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure at eaque esse illum vero veritatis nesciunt debitis corrupti! Totam fuga beatae quae dolore molestias tempore quod delectus illo reiciendis eaque.</p>
-
-            </section>
+            <button>블로그작성</button>
         </article>
 
+        <article id="blog_body">
+            <section class="blog_title">
+                <h4>오늘은 블로그 시작하는날</h4>
+            </section>
+            <section class="blog_text">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione ullam ipsa mollitia accusantium! Autem ipsa doloremque itaque nisi delectus placeat dicta! Ipsa laudantium ipsam accusamus temporibus minus cupiditate, qui aliquid!</p>
+            </section>
+        </article>
     </section>
     <footer>
-        <address>CopyRight &copy; kiekuy47@gmail.com </address>
-
-
-
-
+        <address>CopyRight &copy; callor@callor.com</address>
     </footer>
+   
 </body>
-</html>>
-
+</html>
