--- a/myBlogV2/transition.html
+++ b/myBlogV2/transition.html
@@ -18,7 +18,7 @@
             margin:10px auto;
             background-color: cadetblue;
             color: #333;
-            transition:color 1s ease-in-out, width 0.5s ease-in, all 1s;
+            transition:color 1s ease-in-out, width 0.5s ease-in-out, all 1s;
         }
         .btn:hover{
             color:#fff;
